# OGOS_fastapi_pdfmodule

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.prod  Makefile  README.md  analyze_6001946892.py  check_failed_pdf.py  check_rotation.py  debug_api.py  debug_rotation_5623221.py  diagnose_order.py  do-app.prod.yaml  do-app.staging.yaml  do-app.yaml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  fetch_material.py  gunicorn_conf.py  main.py  material.md  nginx.conf  pyproject.toml  reproduce_issue.py  requirements.txt  simulate_winding_2.py  simulate_winding_4.py  test_dimension_swap.py  test_fix_5633093.py  test_main.http  test_no_swap_correct_dims.py  test_qQ_balance.py
.zencoder/: delta-history.json
6001681569-1_1/: 6001681569-1_1.json
docs/: compound_path_pipeline_plan.md  custom_shape_compound_path_spec.md  explained_steps-pymupdf.md  fix_stans_scaling_issue_5633093.md  pdf_dieline_color_layers.md  winding_diagnostics_guide.md  winding_routing_specification.md
examplecode/: cutcontour_extraction_results.json  cutcontour_extractor.py  cutcontour_visualizer.py  oneup_setup.py  pypdf_spot_color_extractor.py
n8n-examples/: OGOS_PDF_Process_Inline_Job_Config.json
scripts/: batch_process.sh  check_overprint.py  send_pdf.sh  start.sh
specs/: batch_zip_design_pipeline_spec.md  batch_zip_payload_mapping_spec.md  batch_zip_processing_spec.md  design_pdf_sibling_json_spec.md  reseller_processing_spec.md  spec_smart_dimension_swapping.md
tests/: conftest.py  test_api_dieline_layers.py  test_overprint_scope.py  (+4 more)
(+62 files in other folders)
