[project]
name = "fastapiproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic-settings>=2.10.1",
    "pymupdf>=1.26.3",
    "pypdf>=5.8.0",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.2",
    "uvicorn>=0.35.0",
]
